class baseed javascipt

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<widget class="w1 h1 p" data-item="WindowLights" data-label="Fönster" data-icon="square-o"></widget>
 				<widget class="w1 h1 p" data-item="Sovmorgon" data-icon="clock-o"></widget>
 			</div>
-			
+
 			<widget class="w4 h2 p" data-icon="umbrella" data-item="Temperature_FF_Office" data-itemsecond="Hum_FF_Office" data-format="{0} C" data-formatsecond="{0}%" data-label="Uppe"></widget>
 		</div>
 		<div class="h1">
@@ -26,9 +26,13 @@
 		var defaults = {
 			host:'//192.168.11.27:8080' // no http or https, but must start with //
 		};
-		
-	</script>
-	<script type="text/javascript" src="logic.js"></script>
 
+	</script>
+
+	<script type="text/javascript" src="logic.js"></script>
+	<script type="text/javascript" src="baseitems.js"></script>
+	<script>
+		dataHandler.start();
+	</script>
 </body>
 </html>
