--- a/index.html
+++ b/index.html
@@ -22,17 +22,12 @@
 			<widget class="w2 h1 p" data-item="Light_15"></widget>
 		</div>
 	</div>
-	<script type="text/javascript">
-		var defaults = {
-			host:'//192.168.11.27:8080' // no http or https, but must start with //
-		};
-
-	</script>
-
 	<script type="text/javascript" src="logic.js"></script>
 	<script type="text/javascript" src="baseitems.js"></script>
 	<script>
-		dataHandler.start();
+		dataHandler.start( {
+			host:'//192.168.11.27:8080' // no http or https, but must start with //
+		});
 	</script>
 </body>
 </html>
