--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
 		dataHandler.start( {
 			host:'//192.168.11.27:8080' // no http or https, but must start with //
 		});
+
+		/*
+
+		USE THIS TO TRY WITHOUT OPENHAB
+
+		dataHandler.start( {
+			host:'//192.168.11.27:8080' // no http or https, but must start with //
+		});
+
+		*/
 	</script>
 </body>
 </html>
