stavfel och uppsnyggning

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Daschboard</title>
+<title>Dashboard</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -33,7 +33,7 @@
 	<script type="text/javascript" src="logic.js"></script>
 	<script type="text/javascript" src="baseitems.js"></script>
 	<script>
-	
+
 		dataHandler.start( {
 			host:'//192.168.11.27:8080' // no http or https, but must start with //
 		});
