--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
 			<widget class="w2 h1 p" data-item="Lights"></widget>
 			<widget class="w2 h1 p" data-item="Light_15"></widget>
 		</div>
+		<div class="h2">
+				<widget class="w2 h2 p" data-type="TemperatureForecast" data-icon="umbrella" data-item="Temperature_GF_Corridor" data-label="Väder"></widget>
+				<widget class="w1 h1 p" data-item="Light_15"></widget>
+				<widget class="w1 h1 p" data-item="Light_15"></widget>
+				<widget class="w1 h1 p" data-item="Light_15"></widget>
+				<widget class="w1 h1 p" data-item="Light_15"></widget>
+		</div>
 	</div>
 	<script type="text/javascript" src="logic.js"></script>
 	<script type="text/javascript" src="baseitems.js"></script>
