--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <title>Dashboard</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="page.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
-	<div id="cnt">
+	<div id="start" class="page">
 		<div class="h2">
 			<div class="w1 h2 p">
 				<!--
@@ -26,7 +27,7 @@
 		</div>
 		<div class="h1">
 			<widget class="w1 h1 p" data-item="Light_29" data-label="Bollar uppe"></widget>
-			<widget class="w2 h1 p" data-item="Lights"></widget>
+			<widget class="w2 h1 p" data-item="Lights" data-pagelink="view2" data-label="Goto other page"></widget>
 			<widget class="w2 h1 p" data-item="Light_15"></widget>
 		</div>
 		<div class="h2">
@@ -36,6 +37,9 @@
 				<widget class="w1 h1 p" data-item="Light_15"></widget>
 				<widget class="w1 h1 p" data-item="Light_15"></widget>
 		</div>
+	</div>
+	<div class="page hidden-page" id="view2">
+		<h1>annan sida</h1>
 	</div>
 	<script type="text/javascript" src="logic.js"></script>
 	<script type="text/javascript" src="baseitems.js"></script>
