--- a/index.html
+++ b/index.html
@@ -45,9 +45,14 @@
 	<script type="text/javascript" src="baseitems.js"></script>
 	<script>
 
-		dataHandler.start( {
+	/*	dataHandler.start( {
 			host:'//192.168.11.27:8080' // no http or https, but must start with //
+		});*/
+
+		dataHandler.start( {
+			host:'//my.openhab.org'
 		});
+
 
 		/*
 
