--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
+	<div id="back" class="hidden backbutton">&laquo; Back...</div>
 	<div id="start" class="page">
 		<div class="h2">
 			<div class="w1 h2 p">
