--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 					<widget class="w1 h1 p" data-item="Light_15"></widget>
 					<widget class="w1 h1 p" data-item="Light_15"></widget>
 					<widget class="w1 h1 p" data-item="Light_15"></widget>
+					<widget class="w1 h1 p" data-type="WorkFreeDay" data-label="Jobba imorgon"></widget>
 			</div>
 		</div>
 		<div class="page hidden-page" id="view2">
