--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
 
 		itemSettings = {
 			workdayUrl:'http://api.dryg.net/dagar/v2.1/',
-			forecastUrl:'http://api.wunderground.com/api/02058a98650d9760/forecast/q/zmw:00000.6.02435.json'
+			forecastUrl:'http://api.wunderground.com/api/02058a98650d9760/forecast/q/zmw:00000.6.02435.json',
+			trashDay:{
+				start:'2015-09-17',
+				intervalDays:7
+			}
 		};
 
 
