--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 <title>Dashboard</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href='https://fonts.googleapis.com/css?family=Lato:400,300,700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="page.css">
+
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
